--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,8 +1,103 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
 
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+body.body--light {
+	scrollbar-width: thin;
+	scrollbar-color: #e0e0e0 #f7f7f7;
+}
+
+body.body--dark {
+	scrollbar-width: thin;
+	scrollbar-color: #525252 #3d3d3d;
+}
 
 body.body--light {
-    scrollbar-width: thin;
-    scrollbar-color: #e0e0e0 #f7f7f7;
+	color: #292929;
+	background: #f0f0f0;
+}
+
+body.body--dark {
+	color: #f2f2f2;
+	background: #2b2b2b;
+	--q-color-secondary: #4db6ac;
+	--q-color-accent: #fdcc0d;
+	--q-color-positive: #21ba45;
+	--q-color-negative: #d44d5b;
+	--q-color-info: #00a4d8;
+	--q-color-warning: #f2c037;
+}
+
+.q-dark,
+body.body--dark {
+	color: #fff;
+}
+
+body {
+	min-width: 100px;
+	min-height: 100%;
+	font-family: "Exo 2", sans-serif;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-smoothing: antialiased;
+	line-height: 1.5;
+	font-size: 16px;
+}
+
+body,
+html {
+	margin: 0;
+	box-sizing: border-box;
+	width: 100%;
+	direction: ltr;
+	display: block;
+}
+
+*,
+:after,
+:before {
+	box-sizing: inherit;
+	-webkit-tap-highlight-color: transparent;
+	-moz-tap-highlight-color: transparent;
+}
+
+::-webkit-scrollbar {
+	width: 12px;
+}
+
+body.body--light::-webkit-scrollbar-thumb,
+body.body--light ::-webkit-scrollbar-thumb {
+	background: #e0e0e0;
+	border: 2px solid #f7f7f7;
+	border-radius: 7px;
+}
+
+body.body--dark::-webkit-scrollbar-thumb,
+body.body--dark ::-webkit-scrollbar-thumb {
+	background: #525252;
+	border: 2px solid #3d3d3d;
+	border-radius: 7px;
+}
+
+body.body--light::-webkit-scrollbar-track,
+body.body--light ::-webkit-scrollbar-track {
+	background: #f7f7f7;
+}
+
+body.body--dark::-webkit-scrollbar-thumb:hover,
+body.body--dark ::-webkit-scrollbar-thumb:hover {
+	background: #5c5c5c;
+}
+
+body.body--dark::-webkit-scrollbar-track,
+body.body--dark ::-webkit-scrollbar-track {
+	background: #3d3d3d;
+}
+
+body .wp-site-blocks {
+	min-height: 911px;
+	width: 100%;
+	position: relative;
 }
