Block mt-header user account links

--- a/style.css
+++ b/style.css
@@ -7,4 +7,6 @@ Author URI:  https://avalonbg.com
 Version:     1.0.0
 License:     GPLv3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
+Text Domain: mt-theme
+Domain Path: /languages
 */
