--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!-- wp:mt-theme/mt-header /-->
 
-<div>
+<div class="flex flex-col items-center justify-center flex-1 bg-gray-100">
 	<h1>Index page</h1>
 </div>
 
